sample-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smoketest-app
spec:
  selector:
    matchLabels:
      app: smoketest
  replicas: 3
  template:
    metadata:
      labels:
        app: smoketest
    spec:
      containers:
      - name: hello-world
        image: dockercloud/hello-world:latest
        resources:
          requests:
            cpu: 100m
            memory: 200Mi
        ports:
        - containerPort: 80
