sample-app/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: smoketest-loadbalancer
  labels:
    app: smoketest-loadbalancer
  # TODO: enable later on
  # annotations:
  #   external-dns.alpha.kubernetes.io/hostname: service.smoke.breakathon.dev
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: smoketest
