sample-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smoketest-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    external-dns.alpha.kubernetes.io/hostname: smoke.breakathon.dev
    external-dns.alpha.kubernetes.io/ttl: "60"
spec:
  rules:
  - http:
      paths:
      - path: /smoketest
        pathType: Prefix
        backend:
          service:
            name: smoketest-nodeport
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: smoketest-nodeport
  labels:
    app: smoketest-nodeport
spec:
  type: NodePort
  ports:
  - port: 80
  selector:
    app: smoketest
